# moltblock

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  SECURITY.md  composite_ai_entity_architecture.md  landing_page_language.md  moltblock.example.json  moltblock_manifesto.md  moltblock_protocol_v_0.md  mvp_entity_spec.md  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  run.py  tsconfig.json  vitest.config.ts
.github/: ABOUT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: code_entity_graph.json
docs/: composite_ai_entity_architecture.md  landing_page_language.md  moltblock_manifesto.md  moltblock_protocol_v_0.md  mvp_entity_spec.md  openclaw_integration.md  openclaw_integration_value_and_singularity.md
scripts/: strip-coauthor.ps1  test_zai_key.py
skill/: SKILL.md
src/: agents.ts  cli.ts  code-verifier.ts  composite-verifier.ts  config.ts  domain-prompts.ts  entity-base.ts  entity.ts  gateway.ts  governance.ts  graph-runner.ts  graph-schema.ts  handoff.ts  improvement.ts  index.ts  memory.ts  persistence.ts  policy-verifier.ts  risk.ts  signing.ts  types.ts  validation.ts  verifier-interface.ts  verifier.ts
tests/: agents.test.ts  code-verifier.test.ts  composite-verifier.test.ts  config.test.ts  conftest.py  domain-prompts.test.ts  entity-coverage.test.ts  entity-errors.test.ts  entity.test.ts  gateway.test.ts  governance.test.ts  graph-runner-exec.test.ts  graph.test.ts  handoff.test.ts  improvement.test.ts  integration.test.ts  memory.test.ts  persistence.test.ts  (+11 more)
(+24 files in other folders)
